--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
   displayName: Copy to Staging
   inputs:
     SourceFolder: $(Build.SourcesDirectory)
-    Contents: '*.jar'
+    Contents: '**/target/**'
     TargetFolder: $(Build.ArtifactStagingDirectory)
 
 # Publish artifact
